[tool.poetry]
name = "Maze Generator"
version = "0.1.0"
description = "Maze generator built in python using networkx and pyglet"
authors = ["wookie184 <wookie1840@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
pyglet = "^1.5"
networkx = "^2.5"
Pillow = "^8.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
pre-commit = "^2.13.0"

[tool.flake8]
max_line_length=110

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
